--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="d-flex dimention">
 
             <div>
-                <a href="#" class="bold">Home</a>
+                <a href="https://e-comerce-academlo.netlify.app/" class="bold">Home</a>
             </div>            
 
             <div class="d-flex">
